WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272059
[MultiRep HEIC] Fix debug test failures
https://bugs.webkit.org/show_bug.cgi?id=272059
Summary
[MultiRep HEIC] Fix debug test failures
Aditya Keerthi
Reported
2024-04-02 15:19:03 PDT
rdar://125746345
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-04-02 15:26:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26758
EWS
Comment 2
2024-04-02 16:12:54 PDT
Committed
276978@main
(7a5dcd089603): <
https://commits.webkit.org/276978@main
> Reviewed commits have been landed. Closing PR #26758 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug