[MultiRep HEIC] Fix debug test failures https://bugs.webkit.org/show_bug.cgi?id=272059 rdar://125746345

Reviewed by Abrar Rahman Protyasha.

* Source/WebCore/editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::insertMultiRepresentationHEIC):

Attachment element creation should be dependent on the setting, to avoid hitting
assertions.

Canonical link: https://commits.webkit.org/276978@main